fix(various)
Back button not appearing after opening POI and position
Alert user when forms are incomplete
Fix calculation pre-fill when click from position menu
Cant filter POI when isochrone mode
Change interactivity style
too much margin when safe area
Interactivity not working anymore after click when not interactive
Add "select all" for isochrone POI

--- a/src/css/nav.css
+++ b/src/css/nav.css
@@ -3,10 +3,10 @@
     position: absolute;
     top: calc(100% - 78px - var(--safe-area-inset-bottom));
     width: 100%;
-    height: calc(60px + var(--safe-area-inset-bottom));
+    height: 60px ;
     font-size: 12px;
     background-color: white;
-    padding: 10px 0px 8px 0px;
+    padding: 10px 0px calc(8px + var(--safe-area-inset-bottom)) 0px;
     z-index: 3002;
     flex-direction: row;
     align-items: center;
